[workspace]
resolver = "2"
members = [
    "cjdns-crypto",
    "cjdns-core",
    "cjdns-keys",
    "cjdns-bencode",
    "cjdns-bytes",
    "cjdns-ann",
    "cjdns-hdr",
    "cjdns-ctrl",
    "cjdns-admin",
    "cjdns-sniff",
    "cjdns-snode",
    "netchecksum",
    "cjdns-nameserver",
    "cjdns",
    "cjdns-ptest",
    "cjdns-snode-wire",
    "cjdns-util",
]

[workspace.dependencies]
anyhow = "1.0"
dirs = "5"
hex = "0.4"
rand = "0.7"
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sodiumoxide = { git = "https://github.com/cjdelisle/sodiumoxide", rev = "9f6a18d40a4db253edfebac9f2ce5c22d09b1f47", version = "0.2", default-features = false, features = ["std"] }
libsodium-sys = { git = "https://github.com/cjdelisle/sodiumoxide", rev = "9f6a18d40a4db253edfebac9f2ce5c22d09b1f47", version = "0.2" }
ed25519 = "1.5.3" # Sodium includes this as "1" but we depend on things which are not available in older versions.
bendy = { git = "https://github.com/CJDNS-Development-Team/bendy-cjdns", tag = "v0.3.2-cjdns", features = ["std", "serde"] }
thiserror = "1.0"
tokio = { version = "^1", features = ["full"] }
warp = "0.3"
tokio-tungstenite = "0.21"
clap = { version = "4", features = [ "derive" ] }
env_logger = "0.11"
futures = "0.3"
http = "1"
lazy_static = "1.4"
log = "0.4"
parking_lot = "0.12"
rmpv = "0.4" # msgpack encoding
chrono = "0.4"
num_enum = "0.7"
data-encoding = "2.3"
strum = { version = "0.26", features = ["derive"] }
byteorder = "1.5"
base64 = "0.21"
trust-dns-resolver = "0.23.2"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json"]  }

cjdns-admin = { path = "cjdns-admin" }
cjdns-ann = { path = "cjdns-ann" }
cjdns-bencode = { path = "cjdns-bencode" }
cjdns-bytes = { path = "cjdns-bytes" }
cjdns-core = { path = "cjdns-core" }
cjdns-crypto = { path = "cjdns-crypto" }
cjdns-ctrl = { path = "cjdns-ctrl" }
cjdns-hdr = { path = "cjdns-hdr" }
cjdns-keys = { path = "cjdns-keys" }
cjdns-sniff = { path = "cjdns-sniff" }
netchecksum = { path = "netchecksum" }
cjdns-snode-wire = { path = "cjdns-snode-wire" }
cjdns-util = { path = "cjdns-util" }