[package]
name = "cjdns-ann"
version = "0.1.0"
authors = [
    "Sabaun Taraki <taraki.sabaun.rl@gmail.com>"
]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Library for parsing cjdns announcement messages"

[dependencies]
hex = { workspace = true }
sodiumoxide = { workspace = true }
libsodium-sys = { workspace = true }
thiserror = { workspace = true }
cjdns-bytes = { workspace = true }
cjdns-core = { workspace = true }
cjdns-keys = { workspace = true }
