[package]
name = "cjdns-bytes"
version = "0.1.0"
authors = [
    "Alex Kordys <a.kordys@mixbytes.io>",
    "Sabaun Taraki <taraki.sabaun.rl@gmail.com>"
]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Parsing & serializing tools"

[dependencies]
thiserror = { workspace = true }
byteorder = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }

cjdns-keys = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
rand = { workspace = true }