[package]
name = "cjdns-core"
version = "0.1.0"
authors = [
    "Eenae <alexey@mixbytes.io>",
    "Boogerwooger <sergey@mixbytes.io>",
    "Sabaun Taraki <taraki.sabaun.rl@gmail.com>",
    "Alex Kordys <a.kordys@mixbytes.io>"
]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Inter-crate cjdns types, structs & traits"

[dependencies]
lazy_static = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
rand = { workspace = true, features = ["small_rng"] }

