[package]
name = "cjdns-crypto"
version = "0.1.0"
authors = [
    "Alex Kordys <a.kordys@mixbytes.io>"
]
edition = "2018"
license = "GPL-3.0-or-later"
description = "cjdns crypto library"

[dependencies]
parking_lot = "0.11"

# Don't use original sodiumoxide due to bugs in Windows build
# sodiumoxide = "0.2"
# libsodium-sys = "0.2"

# Use customized sodiumoxide which fixes Windows build bugs
sodiumoxide = { git = "https://github.com/cjdelisle/sodiumoxide", rev = "f79b6656b84f02b049470f9ad556a6a0c9980bd7", version = "0.2" }
libsodium-sys = { git = "https://github.com/cjdelisle/sodiumoxide", rev = "f79b6656b84f02b049470f9ad556a6a0c9980bd7", version = "0.2" }