[package]
name = "cjdns-ctrl"
version = "0.1.0"
authors = [
    "Sabaun Taraki <taraki.sabaun.rl@gmail.com>"
]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Library for parsing/serializing CTRL messages"

[dependencies]
num_enum = { workspace = true }

cjdns-bytes = { workspace = true }
cjdns-core = { workspace = true }
cjdns-keys = { workspace = true }
cjdns-hdr = { workspace = true }
netchecksum = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
