[package]
name = "cjdns-hdr"
version = "0.1.0"
authors = [
    "Sabaun Taraki <taraki.sabaun.rl@gmail.com>"
]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Library for parsing and serializing cjdns route and data headers"

[dependencies]
num_enum = { workspace = true }
cjdns-bytes = { workspace = true }
cjdns-core = { workspace = true }
cjdns-keys = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
