[package]
name = "cjdns-keys"
version = "0.1.0"
authors = [
    "Sabaun Taraki <taraki.sabaun.rl@gmail.com>",
    "Alex Kordys <a.kordys@mixbytes.io>"
]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Library for working with cjdns keys"

[dependencies]
data-encoding = { workspace = true }
hex = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

cjdns-crypto = { workspace = true }
