[package]
name = "cjdns-ptest"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

cjdns-snode-wire = { workspace = true }
cjdns-util = { workspace = true }
cjdns-admin = { workspace = true }
cjdns-keys = { workspace = true }
cjdns-bytes = { workspace = true }