[package]
name = "cjdns-sniff"
version = "0.1.0"
authors = [
    "Alex Kordys <a.kordys@mixbytes.io>"
]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Tools for dumping and injecting cjdns traffic"

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

tokio = { workspace = true, features = ["fs", "macros", "net", "udp", "time", "signal"] }

cjdns-admin = { workspace = true }
cjdns-bencode = { workspace = true }
cjdns-bytes = { workspace = true }
cjdns-ctrl = { workspace = true }
cjdns-keys = { workspace = true }
cjdns-hdr = { workspace = true }
