[package]
name = "cjdns-snode"
version = "0.1.0"
authors = [
    "Alex Kordys <a.kordys@mixbytes.io>"
]
edition = "2018"
license = "GPL-3.0-or-later"
description = "cjdns supernode"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
regex = { workspace = true }
rmpv = { workspace = true } # msgpack encoding
hex = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
warp = { workspace = true }
sodiumoxide = { workspace = true }
strum = { workspace = true }
rand = { workspace = true }

cjdns-admin = { workspace = true }
cjdns-ann = { workspace = true }
cjdns-bencode = { workspace = true }
cjdns-bytes = { workspace = true }
cjdns-core = { workspace = true }
cjdns-hdr = { workspace = true }
cjdns-keys = { workspace = true }
cjdns-sniff = { workspace = true }
cjdns-snode-wire = { workspace = true }
cjdns-util = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }